# bzl-a-lib

./: README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  angular.json.bak  package-lock.json  package.json  tsconfig.json
projects/lib1/src/: BUILD.bazel
projects/lib1/src/lib/: BUILD.bazel  lib1.component.ts
src/: BUILD.bazel
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/temp/: BUILD.bazel  temp.module.ts
