package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")


ng_module(
    name = "lib1",
    srcs = glob(
        include = ["*.ts","**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "test.ts"
        ],
    ),
    assets = glob([
      "**/*.css",
      "**/*.html",
    ]) + ([]),
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@types",
        "@npm//rxjs"
    ],
    tsconfig = "//:tsconfig.json"
)