package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")

ng_module(
    name = "lib1",
    module_name = "lib1",
    srcs = glob(
        include = ["*.ts","**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "test.ts"
        ],
    ),
    assets = glob([
      "**/*.css",
      "**/*.html",
    ]) + ([]),
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@types",
        "@npm//rxjs"
    ],
    tsconfig = "//:tsconfig.json"
)

# ts_library(
#     name = "lib",
#     srcs = glob(["*.ts","**/*.ts"]),
#     module_name = "lib",
#     deps = [
#        "@npm//@angular/core",
#         "@npm//@angular/router",
#         "@npm//@types",
#         "@npm//rxjs"
#     ],
# )


# npm_package(
#     name = "lib1pack",
#     deps = [":libfile"],
# )

# filegroup(
#     name = "libfile",
#     srcs = [":lib"],
#     output_group  ="es5_lib",
# )

# nodejs_binary(
#     name = 'libbinary',
#     entry_point = ":libfile"
# )


